--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "devDependencies": {
     "prettier": "^1.18.2"
   },
-  "keywords": ["react", "gatsby"],
+  "keywords": [
+    "react",
+    "gatsby"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
