--- a/package.json
+++ b/package.json
@@ -1,46 +1,36 @@
 {
-  "name": "sdgnys",
-  "private": true,
-  "description": "sdgnys.com with Gatsby",
-  "version": "0.1.0",
-  "author": "Dmitriy Chernukho (gormonn@rambler.ru)",
-  "dependencies": {
-    "@kennethormandy/react-fittext": "^0.6.0",
-    "gatsby": "^2.13.67",
-    "gatsby-image": "^2.2.8",
-    "gatsby-plugin-manifest": "^2.2.5",
-    "gatsby-plugin-offline": "^2.2.6",
-    "gatsby-plugin-react-helmet": "^3.1.3",
-    "gatsby-plugin-sharp": "^2.2.12",
-    "gatsby-source-filesystem": "^2.1.9",
-    "gatsby-transformer-sharp": "^2.2.6",
-    "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1",
-    "react-use-scroll-position": "^2.0.0"
-  },
-  "devDependencies": {
-    "prettier": "^1.18.2"
-  },
-  "keywords": [
-    "react",
-    "gatsby"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+    "name": "sdgnys",
+    "private": true,
+    "description": "sdgnys.com with Gatsby",
+    "version": "0.1.0",
+    "license": "MIT",
+    "scripts": {
+        "build": "gatsby build",
+        "develop": "gatsby develop",
+        "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+        "start": "npm run develop",
+        "serve": "gatsby serve",
+        "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
+        "webserver": "ws --directory ./public"
+    },
+    "dependencies": {
+        "@kennethormandy/react-fittext": "^0.6.0",
+        "gatsby": "^2.13.67",
+        "gatsby-image": "^2.2.8",
+        "gatsby-plugin-manifest": "^2.2.5",
+        "gatsby-plugin-offline": "^2.2.6",
+        "gatsby-plugin-react-helmet": "^3.1.3",
+        "gatsby-plugin-sharp": "^2.2.12",
+        "gatsby-source-filesystem": "^2.1.9",
+        "gatsby-transformer-sharp": "^2.2.6",
+        "prop-types": "^15.7.2",
+        "react": "^16.9.0",
+        "react-dom": "^16.9.0",
+        "react-helmet": "^5.2.1",
+        "react-use-scroll-position": "^2.0.0"
+    },
+    "devDependencies": {
+        "local-web-server": "^3.0.7",
+        "prettier": "^1.18.2"
+    }
 }
